# caffe-adas

./: .gitignore
.github/: ISSUE_TEMPLATE.md
cmake/: CMakeCache.txt  CaffeConfig.cmake  CaffeTargets.cmake  Makefile  caffe_config.h  cmake_install.cmake
cmake/cmake/: CaffeConfig.cmake
cmake/docs/: Makefile  cmake_install.cmake
cmake/examples/: Makefile  cmake_install.cmake
cmake/matlab/: Makefile  cmake_install.cmake
cmake/python/: Makefile  cmake_install.cmake
cmake/tools/: Makefile  cmake_install.cmake
data/ILSVRC2016/: README.md  create_data.sh  create_list.py  labelmap_ilsvrc_clsloc.prototxt  labelmap_ilsvrc_det.prototxt
data/VOC0712/: coco_voc_map.txt  create_data.sh  create_list.sh  labelmap_voc.prototxt
data/coco/: README.md  create_data.sh  create_list.py  labelmap_coco.prototxt
docs/: install_apt.md  installation.md
examples/: 02-fine-tuning.ipynb  convert_model.ipynb  inceptionv3.ipynb  ssd.ipynb  ssd_detect.ipynb
examples/cifar10/: train_full.sh  train_quick.sh
examples/finetune_flickr_style/: readme.md
examples/mnist/: train_lenet_docker.sh
examples/pycaffe/: tools.py
examples/ssd/: plot_detections.py  score_ssd_coco.py  score_ssd_pascal.py  ssd_coco.py  ssd_detect.cpp  ssd_ilsvrc.py  ssd_pascal.py  ssd_pascal_orig.py  (+5 more)
fabu/tools/eval_face/testShuffleNet/: CMakeLists.txt  input_img.txt  shufflenet.param  testShuffleNet.cpp
python/: requirements.txt
scripts/: convert_inception_v3.py  cpp_lint.py  create_annoset.py
tools/: convert_annoset.cpp  create_label_map.cpp  get_image_size.cpp
tracking/: ssd_matching.ipynb
(+222 files in other folders)
